# dartagnan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO  analysis_options.yaml  dartagnan.qrc  pubspec.yaml  run_tests.dart  utils.dart  vscode.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/dartagnan/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: build.yml
snippets/: LibraryLoader.dart  ValueWrapper.h  methodIsOverridden.dart  pubspec.yaml
src/: Logging.cpp  Logging.h  dart_ffi_typedefs.cpp  dart_ffi_typedefs.h  dartagnan.cpp  dartagnan.h  generator_base.cpp  generator_base.h  generator_cppwrapper_header.cpp  generator_cppwrapper_header.h  generator_cppwrapper_impl.cpp  generator_cppwrapper_impl.h  generator_dart.cpp  generator_dart.h  main.cpp
src/printers/: Cpp_HeaderPrinter.cpp  Cpp_HeaderPrinter.h  Cpp_ImplPrinter.cpp  Cpp_ImplPrinter.h  Dart_printer.cpp  Dart_printer.h  ExternC_HeaderPrinter.cpp  ExternC_HeaderPrinter.h  ExternC_ImplPrinter.cpp  ExternC_ImplPrinter.h  printers.cpp  printers.h
src/type_conversions/: to_C.cpp  to_C.h  to_CppWrapper.cpp  to_CppWrapper.h  to_dart.cpp  to_dart.h
tests/: CMakeLists.txt  bindings_global.h  dartagnan.json  test.cpp  test.h  test_exports.h  typesystem.xml
tests/app/: pubspec.yaml
tests/app/lib/: Tests.dart
tests/glue/: qvariant.cpp
